Fix table alignment

--- a/resources/css/creators.css
+++ b/resources/css/creators.css
@@ -117,12 +117,15 @@ main {
     width: 100px;
 }
 
-
 td {
     vertical-align: text-top;
     padding: 0 20px;
     width:50%;
-    
+    margin: auto;
+}
+
+tfoot {
+    width: 100%;
 }
 
 h1, h2, h3, h4, h5 {
